[gd_scene load_steps=2 format=3 uid="uid://0lfmlgpr5q4l"]

[ext_resource type="Script" uid="uid://c5ryxi4t7nelv" path="res://level/arena/props/hazards/base_hazard.gd" id="1_lcs4t"]

[node name="BaseHazard" type="Node3D"]
script = ExtResource("1_lcs4t")

[node name="HazardArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 23

[node name="CollisionShape3D" type="CollisionShape3D" parent="HazardArea"]

[connection signal="body_entered" from="HazardArea" to="." method="_on_hazard_area_body_entered"]
[connection signal="body_exited" from="HazardArea" to="." method="_on_hazard_area_body_exited"]
